--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,7 @@ h2 {
     display: flex;
     align-items: center;
     height: 100vh;
+    padding:30px 0;
 }
 .sign-wrapper {
     padding: 20px 45px;
