--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,7 +39,7 @@ h2 {
     display: flex;
     align-items: center;
     height: 100vh;
-    margin: 20px 0;
+    min-height :100vh;
 }
 .sign-wrapper {
     padding: 20px 45px;
