--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,6 +40,7 @@ h2 {
     align-items: center;
     height: 100vh;
     min-height :100vh;
+    padding-top:10px;
 }
 .sign-wrapper {
     padding: 20px 45px;
