--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,7 @@ h2 {
     display: flex;
     align-items: center;
     margin-top: 20px;
+    min-height:100vh;
 }
 .sign-wrapper {
     padding: 20px 45px;
